--- a/PenguininTask/Views/Base.lproj/Main.storyboard
+++ b/PenguininTask/Views/Base.lproj/Main.storyboard
@@ -5,7 +5,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -34,8 +33,10 @@
                                         <constraints>
                                             <constraint firstAttribute="width" constant="89" id="ygW-K6-wVY"/>
                                         </constraints>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="Search"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" title="Search">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
                                         <connections>
                                             <action selector="searchTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="v3m-Bq-xTJ"/>
                                         </connections>
@@ -44,7 +45,7 @@
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.13802055760000001" green="0.1983743157" blue="0.26737490850000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="Syy-vU-Tnk" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="d64-7U-L4F"/>
                             <constraint firstItem="Syy-vU-Tnk" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="hcS-rZ-RET"/>
@@ -67,9 +68,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="L6w-5j-Qqb">
-                                <rect key="frame" x="20" y="44" width="374" height="818"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="L6w-5j-Qqb">
+                                <rect key="frame" x="20" y="64" width="374" height="798"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="0Ng-JU-7Eo">
                                     <size key="itemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -80,11 +81,11 @@
                             </collectionView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="u8l-zr-kJf"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.13802055760000001" green="0.1983743157" blue="0.26737490850000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="u8l-zr-kJf" firstAttribute="bottom" secondItem="L6w-5j-Qqb" secondAttribute="bottom" id="Buw-ro-di8"/>
                             <constraint firstItem="u8l-zr-kJf" firstAttribute="trailing" secondItem="L6w-5j-Qqb" secondAttribute="trailing" constant="20" id="ISY-3S-ara"/>
-                            <constraint firstItem="L6w-5j-Qqb" firstAttribute="top" secondItem="u8l-zr-kJf" secondAttribute="top" id="Jjt-aK-aYl"/>
+                            <constraint firstItem="L6w-5j-Qqb" firstAttribute="top" secondItem="u8l-zr-kJf" secondAttribute="top" constant="20" id="Jjt-aK-aYl"/>
                             <constraint firstItem="L6w-5j-Qqb" firstAttribute="leading" secondItem="u8l-zr-kJf" secondAttribute="leading" constant="20" id="YgK-lY-E3D"/>
                         </constraints>
                     </view>
@@ -104,6 +105,12 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="R0d-ev-KtT">
                         <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
+                        <textAttributes key="largeTitleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -115,9 +122,4 @@
             <point key="canvasLocation" x="27.536231884057973" y="65.625"/>
         </scene>
     </scenes>
-    <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
